<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_hot_tub_24"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:iconTint="@color/white"
            android:title="@string/menu_gallery" />

        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_baseline_trending_up_24"
            android:title="@string/menu_tools" />
        <item
            android:id="@+id/account"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/contactus"
            android:icon="@drawable/ic_baseline_message_24"
            android:title="@string/menu_send" />
        <item
            android:id="@+id/reviews"
            android:icon="@drawable/ic_baseline_rate_review_24"
            android:title="Reviews" />
        <item
            android:id="@+id/diseases"
            android:icon="@drawable/ic_baseline_color_lens_24"
            android:title="Detect Diseases" />

    </group>


</menu>
